// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar should render 1`] = `
<DocumentFragment>
  <div
    class="Avatar__AvatarStyled-yiil9n-0 fympLW"
    data-testid="Avatar"
  />
</DocumentFragment>
`;

exports[`Avatar should render with custom size 1`] = `
<DocumentFragment>
  <div
    class="Avatar__AvatarStyled-yiil9n-0 clAjq"
    data-testid="Avatar"
  />
</DocumentFragment>
`;

exports[`Avatar should render without shadow 1`] = `
<DocumentFragment>
  <div
    class="Avatar__AvatarStyled-yiil9n-0 jrvbgl"
    data-testid="Avatar"
  />
</DocumentFragment>
`;
